syntax = "proto3";

package raft;

message Null {}

message VoteRequest {
    uint64 term = 1;
    uint64 id = 2;
    uint64 last_index = 3;
    uint64 last_term = 4;
}

message VoteReply {
    uint64 term = 1;
    bool grant = 2;
}

message EntryRequest {
    uint64 term = 1;
    uint64 leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    bytes entries = 5;
    uint64 leader_commit = 6;
}

message EntryReply {
    uint64 term = 1;
    bool success = 2;
}

message Byte {
    bytes body = 1;
}

service Raft {
	rpc RequestVote(VoteRequest) returns (VoteReply);
	rpc AppendEntries (EntryRequest) returns (EntryReply);
	rpc Join(Byte) returns (Null);
}
